--- a/app/src/main/res/layout/activity_history_list_element.xml
+++ b/app/src/main/res/layout/activity_history_list_element.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <TextView
         android:id="@+id/activity_history_list_element_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Какой-то русский текст"
+        android:paddingLeft="@dimen/activity_history_text_padding"
+        android:paddingRight="@dimen/activity_history_text_padding"
+        android:paddingTop="@dimen/activity_history_text_padding"
         android:textColor="@color/colorPrimary"
-        android:paddingLeft="12dp"
-        android:paddingTop="12dp"
-        android:paddingRight="12dp"/>
+        tools:text="Какой-то русский текст"/>
 
     <TextView
         android:id="@+id/activity_history_list_element_language"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Russian"
-        android:paddingLeft="12dp"
-        android:paddingBottom="12dp"
-        android:paddingRight="12dp"/>
+        android:paddingBottom="@dimen/activity_history_text_padding"
+        android:paddingLeft="@dimen/activity_history_text_padding"
+        android:paddingRight="@dimen/activity_history_text_padding"
+        tools:text="Russian"/>
 </LinearLayout>
