--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,45 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".mainwindow.userinterface.MainActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         tools:ignore="UselessParent">
 
-        <EditText
-            android:id="@+id/activity_main_editText"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/activity_main_app_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textMultiLine"
-            android:lines="8"
-            android:minLines="6"
-            android:gravity="top|left"
-            android:maxLines="10"
-            android:scrollbars="vertical"
-            android:hint="@string/activity_main_edittext_hint"
-            tools:ignore="RtlHardcoded"/>
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/activity_main_floatingActionButton"
-            android:layout_width="wrap_content"
+            <android.support.v7.widget.Toolbar
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/activity_main_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.AppBarLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:clickable="true"
-            app:fabSize="mini"
-            android:layout_gravity="center"
-            app:srcCompat="@android:drawable/ic_input_add"/>
-    </LinearLayout>
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:descendantFocusability="beforeDescendants"
+            android:focusableInTouchMode="true"
+            android:orientation="vertical">
 
-</RelativeLayout>
+            <EditText
+                android:id="@+id/activity_main_editText"
+                android:layout_width="@dimen/activity_main_edittext_width"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/edit_text_border"
+                android:ems="10"
+                android:gravity="top|left"
+                android:hint="@string/activity_main_edittext_hint"
+                android:inputType="textMultiLine"
+                android:lines="6"
+                android:maxLines="6"
+                android:minLines="6"
+                android:padding="@dimen/activity_main_edittext_padding"
+                android:scrollbars="vertical"
+                tools:ignore="RtlHardcoded"
+                />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/activity_main_floatingActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/activity_main_floatingactionbutton_margin"
+                android:clickable="true"
+                app:elevation="@dimen/activity_main_floatingactionbutton_elevation"
+                app:fabSize="mini"
+                app:srcCompat="@android:drawable/ic_input_add"/>
+        </LinearLayout>
+    </RelativeLayout>
+
+    <ListView
+        android:id="@+id/activity_main_drawer_list_view"
+        android:layout_width="@dimen/drawer_list_view_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/colorDrawerBackground"
+        android:choiceMode="singleChoice"
+        android:dividerHeight="@dimen/drawer_list_view_divider_height"/>
+
+</android.support.v4.widget.DrawerLayout>
