--- a/app/src/main/res/layout/drawer_element.xml
+++ b/app/src/main/res/layout/drawer_element.xml
@@ -2,26 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="wrap_content"
+              android:orientation="horizontal"
+              tools:ignore="UseCompoundDrawables">
 
     <ImageView
-        android:id="@+id/activity_main_drawer_layout_imageView_icon"
+        android:id="@+id/drawer_element_imageView_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_add"
-        android:padding="@dimen/activity_main_drawer_element_padding"
         android:contentDescription="@string/activity_main_drawer_layout_imageView_icon_description"
+        android:padding="@dimen/activity_main_drawer_element_padding"
+        app:srcCompat="@drawable/ic_add"
         tools:ignore="RtlHardcoded,RtlSymmetry"/>
 
     <TextView
-        android:id="@+id/activity_main_drawer_layout_textView_description"
+        android:id="@+id/drawer_element_textView_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Новый текст"
         android:layout_gravity="center_vertical"
-        android:paddingRight="@dimen/activity_main_drawer_element_padding"
         android:paddingLeft="@dimen/activity_main_drawer_element_padding"
+        android:paddingRight="@dimen/activity_main_drawer_element_padding"
+        tools:text="Новый текст"
         />
 </LinearLayout>
