--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="activity_main_drawer_element_padding">16dp</dimen>
+    <dimen name="activity_main_floatingactionbutton_elevation">0dp</dimen>
+    <dimen name="activity_main_floatingactionbutton_margin">12dp</dimen>
+    <dimen name="activity_main_edittext_padding">12dp</dimen>
+    <dimen name="activity_main_edittext_width">300dp</dimen>
+    <dimen name="drawer_list_view_width">240dp</dimen>
+    <dimen name="drawer_list_view_divider_height">0dp</dimen>
+    <dimen name="activity_history_text_padding">12dp</dimen>
+    <dimen name="drawer_header_padding">3dp</dimen>
 </resources>
