--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main_drawer_layout"
+    android:id="@+id/fragment_main_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mainwindow.userinterface.MainActivity">
+    tools:context=".mainwindow.userinterface.MainFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         tools:ignore="UselessParent">
 
         <android.support.design.widget.AppBarLayout
-            android:id="@+id/activity_main_app_bar"
+            android:id="@+id/fragment_main_app_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -25,7 +25,7 @@
             <android.support.v7.widget.Toolbar
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/activity_main_toolbar"
+                android:id="@+id/fragment_main_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             </android.support.v7.widget.Toolbar>
@@ -42,42 +42,42 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/activity_main_editText"
+                android:id="@+id/fragment_main_editText"
                 android:layout_width="@dimen/activity_main_edittext_width"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/edit_text_border"
                 android:ems="10"
                 android:gravity="top|left"
-                android:hint="@string/activity_main_edittext_hint"
+                android:hint="@string/fragment_main_edittext_hint"
                 android:inputType="textMultiLine"
                 android:lines="6"
                 android:maxLines="6"
                 android:minLines="6"
-                android:padding="@dimen/activity_main_edittext_padding"
+                android:padding="@dimen/fragment_main_edittext_padding"
                 android:scrollbars="vertical"
                 tools:ignore="RtlHardcoded"
                 />
 
             <android.support.design.widget.FloatingActionButton
-                android:id="@+id/activity_main_floatingActionButton"
+                android:id="@+id/fragment_main_floatingActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/activity_main_floatingactionbutton_margin"
                 android:clickable="true"
-                app:elevation="@dimen/activity_main_floatingactionbutton_elevation"
+                app:elevation="@dimen/fragment_main_floatingactionbutton_elevation"
                 app:fabSize="mini"
                 app:srcCompat="@android:drawable/ic_input_add"/>
         </LinearLayout>
     </RelativeLayout>
 
     <ListView
-        android:id="@+id/activity_main_drawer_list_view"
+        android:id="@+id/fragment_main_drawer_list_view"
         android:layout_width="@dimen/drawer_list_view_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/colorDrawerBackground"
+        android:background="@color/colorBackgroundWhite"
         android:choiceMode="singleChoice"
         android:dividerHeight="@dimen/drawer_list_view_divider_height"/>
 
