--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="@dimen/drawer_header_drawable_width"
               android:layout_height="wrap_content"
-              android:orientation="vertical"
               android:paddingBottom="@dimen/drawer_header_padding">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/drawer_list_view_width"
+        android:layout_width="@dimen/drawer_header_drawable_width"
+        android:layout_height="@dimen/drawer_header_drawable_height"
         android:contentDescription="@string/drawer_header_logo_content_description"
-        android:src="@drawable/logo"/>
+        app:srcCompat="@drawable/ic_drawer_header_background"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textColor="@color/colorBackgroundWhite"
+        android:paddingLeft="@dimen/activity_main_drawer_element_padding"
+        android:paddingBottom="@dimen/activity_main_drawer_element_padding"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        tools:ignore="RtlHardcoded,RtlSymmetry" />
+
+</RelativeLayout>
